package Galaga;

public class GalagaGame {
	
	public static void main(String[] args) {
		new GalagaFrame("GalagaGame");
	
	}

}
